2015-08-27  Carl Hetherington  <cth@carlh.net>

	* Tidy up DCP content colour conversion
	a bit.

	* Fix creation of badly-named configuration
	directories in some circumstances (#654).

2015-08-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.46 released.

2015-08-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.45 released.

2015-08-25  Carl Hetherington  <cth@carlh.net>

	* Add video waveform viewer.

2015-08-23  Carl Hetherington  <cth@carlh.net>

	* Use correct fonts to render subtitles in preview (#663).

2015-08-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.44 released.

2015-08-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.43 released.

2015-08-20  Carl Hetherington  <cth@carlh.net>

	* Fix assertion failure with overlapping video content (#666).

2015-08-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.42 released.

2015-08-18  Carl Hetherington  <cth@carlh.net>

	* Add custom dialog to select system fonts on Windows
	(#491).

	* Version 2.1.41 released.

2015-08-18  Carl Hetherington  <cth@carlh.net>

	* Add configuration for DCP creator metadata.

	* Version 2.1.40 released.

2015-08-18  Carl Hetherington  <cth@carlh.net>

	* Fix various problems when creating
	subtitled Interop DCPs on Windows.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.39 released.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Fix problems when encoding 3D from separate
	L/R sources.

	* Version 2.1.38 released.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Fix crop of some YUV content.

2015-08-11  Carl Hetherington  <cth@carlh.net>

	* Prevent multiple creation of certificate chains
	on startup (part of #651).

2015-08-10  Carl Hetherington  <cth@carlh.net>

	* Fix erroneous folder creation on Windows (#654).

	* Fix incorrect layout on Windows (#653).

2015-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.37 released.

2015-08-09  Carl Hetherington  <cth@carlh.net>
