@@ -1,3 +1,8 @@
+2015-08-28  c.hetherington  <cth@carlh.net>
+
+	* Fix crash on adding a KDM to DCP content
+	(hopefully fixing #645).
+
 2015-08-27  Carl Hetherington  <cth@carlh.net>
 
 	* Tidy up DCP content colour conversion
